--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": " demo todo app",
   "author": "robotbatbai <robotbatbai@gmail.com>",
   "private": true,
+  "homepage": "https://robotbatbai.github.io/stock-management-app/",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
@@ -11,10 +12,12 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "firebase": "^6.4.0",
+    "gh-pages": "^2.1.1",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
     "vue": "^2.5.2",
